--- a/compass/trampoline/Cargo.toml
+++ b/compass/trampoline/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "robin"
+name = "trampoline"
 version = "0.1.0"
 edition = "2021"
 description = "A realized ultimate reality foreign chain contract"
@@ -14,6 +14,7 @@ library = []
 
 [dependencies]
 cosmwasm-std.workspace = true
+cw-storage-plus.workspace = true
 eyre.workspace = true
 hex.workspace = true
 schemars.workspace = true
