--- a/packages/xcci/Cargo.toml
+++ b/packages/xcci/Cargo.toml
@@ -5,6 +5,5 @@ edition = "2021"
 description = "Cross chain call interface for Paloma"
 
 [dependencies]
+cosmwasm-schema.workspace = true
 cosmwasm-std.workspace = true
-schemars.workspace = true
-serde.workspace = true
